objects/Life_and_Disability__c.object
<CustomObject>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <formula>IF(ISBLANK( Implementation_Tracking_ID__r.Account_Legal_Name__r.Id ), &apos;&apos;, HYPERLINK(Implementation_Tracking_ID__r.Account_Legal_Name__r.Id, Implementation_Tracking_ID__r.Account_Legal_Name__r.Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anthem_Entity__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.Anthem_Entity__c</formula>
        <label>Anthem Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_or_Declined_Time__c</fullName>
        <formula>CASE(MOD( Life_and_Disability_Check_Date__c - DATE(1985,6,24),7), 

0 , CASE( MOD( Approved_or_Declined_Date__c - Life_and_Disability_Check_Date__c,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Approved_or_Declined_Date__c - Life_and_Disability_Check_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Approved_or_Declined_Date__c - Life_and_Disability_Check_Date__c,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Approved_or_Declined_Date__c - Life_and_Disability_Check_Date__c,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Approved_or_Declined_Date__c - Life_and_Disability_Check_Date__c,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Approved_or_Declined_Date__c - Life_and_Disability_Check_Date__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Approved_or_Declined_Date__c - Life_and_Disability_Check_Date__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( Approved_or_Declined_Date__c - Life_and_Disability_Check_Date__c )/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval or Declined Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Date_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approved_Date_Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approved_or_Declined_Date__c</fullName>
        <description>The Date When Record Stage Field Value Changes To Approved or Declined.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Approved or Declined Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_Implementer__c</fullName>
        <formula>Implementation_Tracking_ID__r.Assigned_Implementer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Implementer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audit_Complete_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Audit Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Audit_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Audit Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Life_and_Disabilities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Review_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bill Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bravo_Indicator__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.Bravo_Indicator__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bravo Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COMPLETE_PAPERWORK_RECEIVED_IN_IMPL__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.COMPLETE_PAPERWORK_RECEIVED_IN_IMPL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>COMPLETE PAPERWORK RECEIVED IN IMPL</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case_Install_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Case Install Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Case_Install_Complete__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Case Install Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case_Install_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Install Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Life_and_Disabilities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Install_Received_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Case Install Received date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cert_Complete__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cert Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cert_Sent_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cert Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cert_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cert Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cert_Team_Received_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cert Team Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Claim_System__c</fullName>
        <formula>Implementation_Tracking_ID__r.Claim_System__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompassI_Complete__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CompassI Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CompassI_Enrollment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CompassI Enrollment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CompassI_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CompassI Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Life_and_Disabilities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <label>Contract Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Request</fullName>
                </value>
                <value>
                    <fullName>Work in Progress</fullName>
                </value>
                <value>
                    <fullName>Pending L&amp;D Implementation</fullName>
                </value>
                <value>
                    <fullName>Pending Compliance</fullName>
                </value>
                <value>
                    <fullName>Pending Audit</fullName>
                </value>
                <value>
                    <fullName>Corrections</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contracts_Audit_Complete_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contracts Audit Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contracts_Audit_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contracts Audit Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Life_and_Disabilities5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contracts_Audit_Received_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contracts Audit Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contracts_Corrections_Complete__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contracts Corrections Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conversion_Setup_Complete__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Conversion Setup Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Correction_Complete_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Correction Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_SME_time__c</fullName>
        <formula>IF( 
ISBLANK(Approved_Date_Completed__c),((Now() - In_Progress_Date_Completed__c) - Pending_Correction_Time__c) , 
((Approved_Date_Completed__c - In_Progress_Date_Completed__c) - Pending_Correction_Time__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current SME time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Language_Indicator__c</fullName>
        <label>Custom Language Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Language__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Custom Language</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Master_Account__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.Automation_Eligible__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Master Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DDS_Enrollment_Load_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DDS Enrollment Load Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DDS_Group_Load_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DDS Group Load Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Approved__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Implementations_Notified_Of_Sale__c</fullName>
        <formula>Implementation_Tracking_ID__r.Date_Implementations_Notified_Of_Sale__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Implementations Notified Of Sale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_From_Assignment__c</fullName>
        <formula>Implementation_Tracking_ID__r.Days_From_Assignment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days From Assignment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDI_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EDI Comments</label>
        <length>62768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EDI_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EDI Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Life_and_Disabilities6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EDI_Processing_Time__c</fullName>
        <formula>Moved_to_Prod__c  -  EDI_Received_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EDI Processing Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EDI_Received_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EDI Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EDI_Status__c</fullName>
        <label>EDI Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Impressions_Needed__c</fullName>
        <formula>Text(Implementation_Tracking_ID__r.Implementation_Record_ID__r.First_Impressions_Needed__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Impressions Needed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Test_File_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Test File Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <formula>IF( ISBLANK( Implementation_Tracking_ID__r.Group_Number__r.Id ), &apos;&apos;, HYPERLINK(Implementation_Tracking_ID__r.Group_Number__r.Id, Implementation_Tracking_ID__r.Group_Number__r.Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Size__c</fullName>
        <formula>Implementation_Tracking_ID__r.Group_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impacted_Products__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Impacted Products</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Name__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Case_Name1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Case Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Start_Date__c</fullName>
        <description>This field refers to the Implementation Case Start Date field of the related Implementation Case.</description>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.EffectiveDate</formula>
        <label>Implementation Case Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Status__c</fullName>
        <formula>Text(Implementation_Tracking_ID__r.Implementation_Record_ID__r.Implementation_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Effective_Date__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Tracking_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Tracking ID</label>
        <referenceTo>Implementation_Tracking__c</referenceTo>
        <relationshipLabel>Life and Disabilities</relationshipLabel>
        <relationshipName>Life_and_Disabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementation_Type__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Progress_Date_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>In_Progress_Date_Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Initial_L_D_Enrollment_Type__c</fullName>
        <label>Initial L&amp;D Enrollment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Census</fullName>
                </value>
                <value>
                    <fullName>Applications</fullName>
                </value>
                <value>
                    <fullName>EDI</fullName>
                </value>
                <value>
                    <fullName>CompassI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intake_Type_Migration__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.Intake_Type_Migration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Intake Type Migration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsOwnerQueue__c</fullName>
        <formula>Owner:Queue.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsOwnerQueue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Case_Install_Owner_Logged_In__c</fullName>
        <formula>IF( $User.Id = Case_Install_Owner__c ,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Case Install Owner Logged In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Contract_Owner_Logged_In__c</fullName>
        <formula>IF( $User.Id = Contract_Owner__c ,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Contract Owner Logged In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_EDI_Owner_Logged_In__c</fullName>
        <formula>IF( $User.Id = EDI_Owner__c ,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is EDI Owner Logged In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_L_D_Audit_Owner_Logged_In__c</fullName>
        <formula>IF( $User.Id = Audit_Owner__c ,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is L&amp;D Audit Owner Logged In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_L_D_DDS_Detail_Applicable__c</fullName>
        <label>Is L&amp;D DDS Detail Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Membership_Owner_Logged_In__c</fullName>
        <formula>IF( $User.Id = Membership_Owner__c ,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Membership Owner Logged In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Owner_the_Logged_in_users__c</fullName>
        <formula>IF(Owner:User.Id == $User.Id,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Owner the Logged in user</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Pending_Correction_Record_Present__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Pending Correction Record Present</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JAA_Group__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.JAA_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JAA Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_Date_Assigned__c</fullName>
        <description>[Pratibha]- 02/19- created this field as part of PRDCRM-30096</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Assigned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L_D_Case_Install_Status__c</fullName>
        <label>L&amp;D Case Install Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PSR Assigned</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Pending back to Implementation</fullName>
                </value>
                <value>
                    <fullName>Await Census</fullName>
                </value>
                <value>
                    <fullName>Bill Review</fullName>
                </value>
                <value>
                    <fullName>Corrections</fullName>
                </value>
                <value>
                    <fullName>Load Members</fullName>
                </value>
                <value>
                    <fullName>MASS LD</fullName>
                </value>
                <value>
                    <fullName>MEU Review</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Setup Started</fullName>
                </value>
                <value>
                    <fullName>Audit Complete</fullName>
                </value>
                <value>
                    <fullName>Manual Members</fullName>
                </value>
                <value>
                    <fullName>Bill Request</fullName>
                </value>
                <value>
                    <fullName>In Audit</fullName>
                </value>
                <value>
                    <fullName>Pending back to UW</fullName>
                    <isActive>false</isActive>
                    <label>Pending back to UW</label>
                </value>
                <value>
                    <fullName>Sent to Issue Control</fullName>
                    <isActive>false</isActive>
                    <label>Sent to Issue Control</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L_D_Case_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>L&amp;D Case Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L_D_Check_Date__c</fullName>
        <formula>IF(AND( 
Implementation_Tracking_ID__r.SBC_Approved__c,
Implementation_Tracking_ID__r.UW_Approved__c, 
Implementation_Tracking_ID__r.UW_Life_Disability_Approved__c, 
Implementation_Tracking_ID__r.UW_Medical_Approved__c, 
Implementation_Tracking_ID__r.UW_Vision_Approved__c,
Implementation_Tracking_ID__r.InterPlan_Approved__c
), TODAY() , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L&amp;D Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L_D_Check__c</fullName>
        <formula>IF(AND( 
Implementation_Tracking_ID__r.SBC_Approved__c,
Implementation_Tracking_ID__r.UW_Approved__c, 
Implementation_Tracking_ID__r.UW_Life_Disability_Approved__c, 
Implementation_Tracking_ID__r.UW_Medical_Approved__c, 
Implementation_Tracking_ID__r.UW_Vision_Approved__c,
Implementation_Tracking_ID__r.InterPlan_Approved__c
), True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L&amp;D Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L_D_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>To be used by Contracts, E&amp;B, etc.</inlineHelpText>
        <label>L&amp;D Operations Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L_D_Complete__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>L&amp;D Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L_D_Enrollment_and_Billing_Source_System__c</fullName>
        <label>L&amp;D Enrollment and Billing Source System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FACETS</fullName>
                </value>
                <value>
                    <fullName>WGS</fullName>
                </value>
                <value>
                    <fullName>COMPASS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L_D_File_Type__c</fullName>
        <label>L&amp;D File Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>834</fullName>
                </value>
                <value>
                    <fullName>Compass PF</fullName>
                </value>
                <value>
                    <fullName>Compass PF/AHW</fullName>
                </value>
                <value>
                    <fullName>LDex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L_D_Membership_Status__c</fullName>
        <label>L&amp;D Membership Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enrolling</fullName>
                </value>
                <value>
                    <fullName>Pend Out – Missing info</fullName>
                </value>
                <value>
                    <fullName>Pend In</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L_D_Product_Sold__c</fullName>
        <formula>OR(Implementation_Tracking_ID__r.Implementation_Record_ID__r.Quote.Number_of_Life_Product_Sold__c &gt;= 1,
Implementation_Tracking_ID__r.Implementation_Record_ID__r.Quote.Number_of_Disability_Product_Sold__c &gt;= 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L&amp;D Product Sold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L_D_Product_Type__c</fullName>
        <label>L&amp;D Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Basic BCBS Build Only</fullName>
                </value>
                <value>
                    <fullName>L/D (Complex) GGL Build Only</fullName>
                </value>
                <value>
                    <fullName>Basic BCBS with Complex L/D GGL Build</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L_D_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>L&amp;D Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L_D_SME_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>To be used by L&amp;D IC.</inlineHelpText>
        <label>L&amp;D IC Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L_D_SME__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>L&amp;D SME</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Life_and_Disabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L_D_Stage__c</fullName>
        <label>L&amp;D Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initiated</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Life_and_Disability_Check_Date__c</fullName>
        <description>Captures Date When The Dental_Complete Check Field Is True</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Captures Date When The Dental_Complete Check Field Is True</inlineHelpText>
        <label>Life and Disability Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Life_and_Disability_Original_Check_Date__c</fullName>
        <description>Life and Disability Original Check Date Used In The Workflow Rule When A New Record Is Created.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Life and Disability Original Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Life_and_Disability_Original_Date_Check__c</fullName>
        <description>Original Dental_Complete Date Used In The Workflow Rule When A New Record Is Created.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Life and Disability Original Date Check</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LoggedinProfile__c</fullName>
        <formula>$User.ProfileName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LoggedinProfile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCS_Group__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.MCS_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MCS Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Membership_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Membership Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Membership_Complete__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Membership Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Membership_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Membership Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Life_and_Disabilities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Membership_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Membership Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Membership_Start__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Membership Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Moved_to_Prod__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Moved to Prod</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Not_Started_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Not Started Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.Opportunity.RecordTypeName__c</formula>
        <label>Opportunity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Date_Captured__c</fullName>
        <formula>IF(Original_L_D_Complete_Date__c &lt;&gt; NULL , True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Date Captured</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>